--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "description": "NestJS backend for Exam Adda",
   "scripts": {
-    "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start": "PORT=3001 nest start",
+    "start:dev": "PORT=3001 nest start --watch",
     "dev": "npm run start:dev",
     "build": "nest build",
     "prisma": "prisma",
@@ -24,7 +24,9 @@
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "@nestjs/swagger": "^7.4.0",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
